# laengine

./: README.md  pyproject.toml
skills/: game-ui-skill.md
src/laengine/: __init__.py
src/laengine/brasfoot/: __init__.py  data.py  engine.py  models.py
src/laengine/mcp/: __init__.py  server.py
