[project]
name = "laengine"
version = "0.1.0"
description = "Game development capability for LAOS — match simulation, sports data, interactive UI templates"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "flask>=3.0",
    "flask-cors>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/laengine"]

[tool.uv]
package = true

[project.scripts]
laengine-server = "laengine.mcp.server:main"
